added more features and code refactor

--- a/index.html
+++ b/index.html
@@ -16,15 +16,24 @@
                 </div>
             </header>
             <article class="play-area">
-                <div id="winStatus">Playing</div>
+                <div id="winStatus">Start Game</div>
             </article>
             <section class="dice-area">
                 <!-- <div id="dice">0</div> -->
                 <div class="dice-container">
                     <img src="./images//dice-six-faces-1.svg" id="diceImg" />
                 </div>
+
+                <div class="game-controls hide">
+                    <button id="throwDice">Throw</button>
+                </div>
+
+                <div class="base-controls">
+                    <button id="playGame">Play</button>
+                    <button id="playAgain" class="hide">Play again</button>
+                </div>
                 
-                <button id="throwDice">Throw</button>
+                
             </section>
             <footer class="ludo-footer"></footer>
         </div>
