--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
             <section class="game-info-sec wrapper">
                 <div class="info-wrapper">
                     <ol>
-                        <li>here are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration </li>
-                        <li>in some form, by injected humour, or randomised words which don't look even </li>
-                        <li>If you are going to use a passage of Lorem Ipsum, you need to be s</li>
+                        <li>Score 20 will loose your current score</li>
+                        <li>First level winning score is 30</li>
+                        <li>Second level winning score is 50</li>
                     </ol>
                 </div>
             </section>
